<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/illnessRecyclerView"
            android:title="@string/illneslist"
            android:checked="true"
            android:icon="@drawable/ic_list"/>
        <item
            android:id="@+id/Community"
            android:title="@string/Community"
            android:icon="@drawable/ic_forum"/>
    </group>
        <group
            android:id="@+id/Tracker"
            android:checkableBehavior="single">
            <item
                android:id="@+id/trackertitle"
                android:title="@string/tracker">
<menu>
        <item
            android:id="@id/tasks_fragment_dest"
            android:icon="@drawable/ic_list"
            android:title="@string/list_title" />
        <item
            android:id="@id/statistics_fragment_dest"
            android:icon="@drawable/ic_self_improvement"
            android:title="@string/statistics_title" />
</menu>
            </item>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle"
            android:title="@string/account">
            <menu>
                <item
                    android:id="@+id/Settings"
                    android:title="@string/setting"
                    android:icon="@drawable/ic_settings"/>
                <item
                    android:id="@+id/logout"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_logout"/>
            </menu>
        </item>
    </group>

</menu>