<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_500"
        android:textSize="40sp" />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email"
        android:layout_marginTop="15dp"
        android:id="@+id/receiveremail"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_below="@+id/txtpass"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="275dp"
        android:layout_height="69dp"
        android:layout_below="@+id/receiveremail"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="48dp"
        android:enabled="true"
        android:text="@string/Submit"
        app:cornerRadius="30dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_marginTop="10dp"
        android:text="@string/receiveconfirmation"
        android:layout_marginStart="4dp"/>



</RelativeLayout>