<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcomebacktext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="250dp"
        android:text="@string/welcome_back"
        android:textColor="@color/purple_500"
        android:textSize="40sp" />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email"
        android:layout_marginTop="15dp"
        android:id="@+id/signinemaillayout"
        android:layout_below="@+id/welcomebacktext"
        app:startIconDrawable="@drawable/ic_email">
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signinemail"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password"
        android:layout_marginTop="15dp"
        android:id="@+id/signinpasswordlayout"
        android:layout_below="@+id/signinemaillayout"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signinpassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="275dp"
        android:layout_height="69dp"
        android:layout_below="@+id/signinpasswordlayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="start"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="76dp"
        android:text="@string/action_sign_in"
        app:cornerRadius="30dp" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="142dp"
        android:layout_marginLeft="137dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="122dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_700"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noaccttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotpassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="100dp"
        android:text="@string/noAccount"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpassword"
        android:layout_marginTop="100dp"
        android:layout_toRightOf="@+id/noaccttxt"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_in"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:id="@+id/signuptext"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loading"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp" />
</RelativeLayout>