<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Register"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/register"
        android:textColor="@color/purple_500"
        android:textSize="40sp" />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/register"
        android:id="@+id/registeremaillayout"
        app:startIconDrawable="@drawable/ic_email">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registeremail"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registeremaillayout"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/fullname"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registeremail"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newpasswordlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newpassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpasswordlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newpasswordlayout"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmpassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:layout_below="@+id/confirmpasswordlayout"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:cornerRadius="25dp" />

    <com.google.android.gms.common.SignInButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerbutton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="147dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="137dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerbutton"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="80dp"
        android:text="@string/already_have_an_account"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerbutton"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        android:layout_toRightOf="@+id/forgotpass"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_in"
        android:textColor="@color/purple_700"
        android:textSize="15sp" />




</RelativeLayout>